# telegram-weather-bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: api.py  config.py  main.py  routers.py
app/api/: __init__.py  whether_api.py
app/config/: __init__.py  bot.py  redis.py
app/keyboard/: __init__.py  start_keyboard.py
app/routers/: __init__.py  forecast.py  help.py  location.py  other_text_messages.py
app/routers/states/: __init__.py  weather_states.py
app/storage/: __init__.py  redis.py
app/utils/: __init__.py  get_weather.py  send_weather_from_the_city.py  send_weather_update.py  weather_icons.py
